Refactor stuntbike.html structure and metadata

--- a/stuntbike.html
+++ b/stuntbike.html
@@ -1,42 +1,43 @@
-
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Stunt Bike Extreme - Playtropolis</title>
-    <link rel="canonical" href="https://playtropolis.com/Stunt-bike-extreme">
-	<script>
-        window.config = {
-            loader: 'unity-2020',
-            debug: false,
-            maxRatio: 24 / 9,
-            minRatio: 9 / 24,
-
-            title: 'Stunt Bike Extreme',
-            thumbnail: 'd115380307564d68096317ffd29cbcf9.png',
-            numScreenshots:  4 ,
-
-            unityVersion: '2022.3.17f1',
-            unityWebglBuildUrl: '',
-
-            fileSize:  50 ,
-            cachedDecompressedFileSizes: {
-                '50469b7eb926d518830d3623a0ec028c.wasm':  40368008 ,
-                '97ea6da3054dfb0c957cc4556e6249e8.js':  408130 ,
-                'WebGL.loader.js':  20467 ,
-                'f53bde23dbc809997d318c85b4ac3ed1.data':  9864229 ,
-            },
-            "metadata": {"poki_template_version":1,"background_color":"#231F20","code_filename":"50469b7eb926d518830d3623a0ec028c.wasm","company_name":"Hyperkani","data_filename":"f53bde23dbc809997d318c85b4ac3ed1.data","development_player":"false","framework_filename":"97ea6da3054dfb0c957cc4556e6249e8.js","height":"600","loader_filename":"WebGL.loader.js","product_name":"Stunt Bike Extreme","product_version":"0.502","splash_screen_style":"Dark","unity_version":"2022.3.17f1","use_data_caching":"true","use_threads":"false","use_wasm":"true","use_webgl_1_0":"true","use_webgl_2_0":"true","width":"960"}
-        };
-	</script>
-    <!-- will be copied to the resulting head //-->
+  <meta charset="UTF-8">
+  <title>Stunt Bike Extreme | Nox</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script>
+    window.config = {
+      loader: 'unity-2020',
+      debug: false,
+      maxRatio: 24 / 9,
+      minRatio: 9 / 24,
+      title: 'Stunt Bike Extreme',
+      thumbnail: 'd115380307564d68096317ffd29cbcf9.png',
+      numScreenshots: 4,
+      unityVersion: '2022.3.17f1',
+      unityWebglBuildUrl: '',
+      fileSize: 50,
+      cachedDecompressedFileSizes: {
+        '50469b7eb926d518830d3623a0ec028c.wasm': 40368008,
+        '97ea6da3054dfb0c957cc4556e6249e8.js': 408130,
+        'WebGL.loader.js': 20467,
+        'f53bde23dbc809997d318c85b4ac3ed1.data': 9864229
+      },
+      metadata: {
+        background_color: '#231F20',
+        code_filename: '50469b7eb926d518830d3623a0ec028c.wasm',
+        company_name: 'Hyperkani',
+        data_filename: 'f53bde23dbc809997d318c85b4ac3ed1.data',
+        framework_filename: '97ea6da3054dfb0c957cc4556e6249e8.js',
+        loader_filename: 'WebGL.loader.js',
+        product_name: 'Stunt Bike Extreme',
+        product_version: '0.502',
+        width: '960',
+        height: '600'
+      }
+    };
+  </script>
 </head>
-<body>
-	<script src="https://games.playtropolis.com/scripts/loaders/v3/master-loader.js"></script>
-    <!-- will be copied to the resulting body //-->
-    <!-- will also be copied to the resulting body //-->
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"f32b117169f04cb0b6df465d556ac0f6","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
+<body style="margin:0; background:#000;">
+  <script src="https://games.playtropolis.com/scripts/loaders/v3/master-loader.js"></script>
 </body>
 </html>
