--- a/stuntbike.html
+++ b/stuntbike.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Stunt Bike Extreme | Nox</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script>
-    window.config = {
-      loader: 'unity-2020',
-      debug: false,
-      maxRatio: 24 / 9,
-      minRatio: 9 / 24,
-      title: 'Stunt Bike Extreme',
-      thumbnail: 'd115380307564d68096317ffd29cbcf9.png',
-      numScreenshots: 4,
-      unityVersion: '2022.3.17f1',
-      unityWebglBuildUrl: '',
-      fileSize: 50,
-      cachedDecompressedFileSizes: {
-        '50469b7eb926d518830d3623a0ec028c.wasm': 40368008,
-        '97ea6da3054dfb0c957cc4556e6249e8.js': 408130,
-        'WebGL.loader.js': 20467,
-        'f53bde23dbc809997d318c85b4ac3ed1.data': 9864229
-      },
-      metadata: {
-        background_color: '#231F20',
-        code_filename: '50469b7eb926d518830d3623a0ec028c.wasm',
-        company_name: 'Hyperkani',
-        data_filename: 'f53bde23dbc809997d318c85b4ac3ed1.data',
-        framework_filename: '97ea6da3054dfb0c957cc4556e6249e8.js',
-        loader_filename: 'WebGL.loader.js',
-        product_name: 'Stunt Bike Extreme',
-        product_version: '0.502',
-        width: '960',
-        height: '600'
-      }
-    };
-  </script>
-</head>
-<body style="margin:0; background:#000;">
-  <script src="https://games.playtropolis.com/scripts/loaders/v3/master-loader.js"></script>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <title>Stunt Bike Extreme</title>
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+                background: #efefef;
+                font-family: Arial, sans-serif;
+                overflow: hidden;
+            }
+            .game-container {
+                width: 100vw;
+                height: 100vh;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .game-frame {
+                width: 100%;
+                height: 100%;
+                border: none;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="game-container">
+            <iframe 
+                src="https://games.playtropolis.com/stunt-bike-extreme/" 
+                title="Stunt Bike Extreme" 
+                allow="autoplay; fullscreen; microphone; focus-without-user-activation *; screen-wake-lock; gamepad;" 
+                allowfullscreen 
+                sandbox="allow-forms allow-modals allow-orientation-lock allow-pointer-lock allow-presentation allow-scripts allow-same-origin allow-popups" 
+                loading="eager" 
+                class="game-frame">
+            </iframe>
+        </div>
+    </body>
 </html>
